add component I/F, basic gate

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,1 +1,11 @@
-add_executable(mips main.cpp)
+
+add_executable(
+        mips
+
+        main.cpp
+
+        component.cpp
+        gate.cpp
+)
+
+target_include_directories(mips PUBLIC ${CMAKE_SOURCE_DIR}/includes)
