--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,13 @@ project(mips)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+include(FetchContent)
+FetchContent_Declare(
+        googletest
+        GIT_REPOSITORY https://github.com/google/googletest.git
+        GIT_TAG        v1.14.0
+)
+FetchContent_MakeAvailable(googletest)
+
 add_subdirectory(src)
+add_subdirectory(tests)
